[package]
name = "final-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.131.0"
piston = "0.55.0"
rand = "0.8.4"
palette = "0.7.3"
plotters = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
ndarray = "0.15.6"
nalgebra = "0.32.3"
num-traits = "0.2" 
indicatif = "0.15.0"
